--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "ant-design-vue": "^1.4.10",
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
+    "jquery": "^3.4.1",
     "mockjs": "^1.1.0",
     "viser-vue": "^2.4.7",
     "vue": "^2.5.2",
