--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "ant-design-vue": "^1.4.10",
+    "ant-design-vue": "^1.6.0",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
+    "echarts": "^4.8.0",
     "jquery": "^3.4.1",
     "mockjs": "^1.1.0",
     "viser-vue": "^2.4.7",
